objects/G2Crowd__G2_Event__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>G2 Events</relationshipLabel>
        <relationshipName>G2_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Days_Ago__c</fullName>
        <label>Days Ago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_ID__c</fullName>
        <externalId>true</externalId>
        <label>G2 ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Visitor__c</fullName>
        <label>G2 Visitor</label>
        <referenceTo>G2Crowd__G2_Visiting_Organization__c</referenceTo>
        <relationshipLabel>G2 Events</relationshipLabel>
        <relationshipName>G2_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G2Crowd__IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Logo_URLs__c</fullName>
        <label>Logo URLs</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>G2 Events</relationshipLabel>
        <relationshipName>G2_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>G2 Event</label>
    <nameField>
        <label>G2 Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G2 Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>